# ETL_exercise_1

./: README.md  main.py  pyproject.toml  requirements.txt
src/: extrction.py  loading.py  setting.py  tables.sql  transformation.py
